imswitch/imcontrol/model/interfaces/ximc/ximc.h

	
	typedef struct calibration_t
	{
		double A;					
		unsigned int MicrostepMode;	
	} calibration_t;
#define LIBXIMC_VERSION 2.13.5
#define ENUMERATE_PROBE     0x01 	
#define ENUMERATE_ALL_COM   0x02 	
#define ENUMERATE_NETWORK   0x04 	
#define MOVE_STATE_MOVING         0x01 	
#define MOVE_STATE_TARGET_SPEED   0x02 	
#define MOVE_STATE_ANTIPLAY       0x04 	
#define EEPROM_PRECEDENCE   0x01 	
#define PWR_STATE_UNKNOWN   0x00 	
#define PWR_STATE_OFF       0x01 	
#define PWR_STATE_NORM      0x03 	
#define PWR_STATE_REDUCT    0x04 	
#define PWR_STATE_MAX       0x05 	
#define STATE_CONTR                    0x000003F 	
#define STATE_ERRC                     0x0000001 	
#define STATE_ERRD                     0x0000002 	
#define STATE_ERRV                     0x0000004 	
#define STATE_EEPROM_CONNECTED         0x0000010 	
#define STATE_IS_HOMED                 0x0000020 	
#define STATE_SECUR                    0x1B3FFC0 	
#define STATE_ALARM                    0x0000040 	
#define STATE_CTP_ERROR                0x0000080 	
#define STATE_POWER_OVERHEAT           0x0000100 	
#define STATE_CONTROLLER_OVERHEAT      0x0000200 	
#define STATE_OVERLOAD_POWER_VOLTAGE   0x0000400 	
#define STATE_OVERLOAD_POWER_CURRENT   0x0000800 	
#define STATE_OVERLOAD_USB_VOLTAGE     0x0001000 	
#define STATE_LOW_USB_VOLTAGE          0x0002000 	
#define STATE_OVERLOAD_USB_CURRENT     0x0004000 	
#define STATE_BORDERS_SWAP_MISSET      0x0008000 	
#define STATE_LOW_POWER_VOLTAGE        0x0010000 	
#define STATE_H_BRIDGE_FAULT           0x0020000 	
#define STATE_WINDING_RES_MISMATCH     0x0100000 	
#define STATE_ENCODER_FAULT            0x0200000 	
#define STATE_ENGINE_RESPONSE_ERROR    0x0800000 	
#define STATE_EXTIO_ALARM              0x1000000 	
#define STATE_DIG_SIGNAL     0xFFFF 	
#define STATE_RIGHT_EDGE     0x0001 	
#define STATE_LEFT_EDGE      0x0002 	
#define STATE_BUTTON_RIGHT   0x0004 	
#define STATE_BUTTON_LEFT    0x0008 	
#define STATE_GPIO_PINOUT    0x0010 	
#define STATE_GPIO_LEVEL     0x0020 	
#define STATE_BRAKE          0x0200 	
#define STATE_REV_SENSOR     0x0400 	
#define STATE_SYNC_INPUT     0x0800 	
#define STATE_SYNC_OUTPUT    0x1000 	
#define STATE_ENC_A          0x2000 	
#define STATE_ENC_B          0x4000 	
#define ENC_STATE_ABSENT    0x00 	
#define ENC_STATE_UNKNOWN   0x01 	
#define ENC_STATE_MALFUNC   0x02 	
#define ENC_STATE_REVERS    0x03 	
#define ENC_STATE_OK        0x04 	
#define WIND_A_STATE_ABSENT    0x00 	
#define WIND_A_STATE_UNKNOWN   0x01 	
#define WIND_A_STATE_MALFUNC   0x02 	
#define WIND_A_STATE_OK        0x03 	
#define WIND_B_STATE_ABSENT    0x00 	
#define WIND_B_STATE_UNKNOWN   0x10 	
#define WIND_B_STATE_MALFUNC   0x20 	
#define WIND_B_STATE_OK        0x30 	
#define MVCMD_NAME_BITS   0x3F 	
#define MVCMD_UKNWN       0x00 	
#define MVCMD_MOVE        0x01 	
#define MVCMD_MOVR        0x02 	
#define MVCMD_LEFT        0x03 	
#define MVCMD_RIGHT       0x04 	
#define MVCMD_STOP        0x05 	
#define MVCMD_HOME        0x06 	
#define MVCMD_LOFT        0x07 	
#define MVCMD_SSTP        0x08 	
#define MVCMD_ERROR       0x40 	
#define MVCMD_RUNNING     0x80 	
#define RPM_DIV_1000   0x01 	
#define ENGINE_REVERSE          0x01 	
#define ENGINE_CURRENT_AS_RMS   0x02 	
#define ENGINE_MAX_SPEED        0x04 	
#define ENGINE_ANTIPLAY         0x08 	
#define ENGINE_ACCEL_ON         0x10 	
#define ENGINE_LIMIT_VOLT       0x20 	
#define ENGINE_LIMIT_CURR       0x40 	
#define ENGINE_LIMIT_RPM        0x80 	
#define MICROSTEP_MODE_FULL       0x01 	
#define MICROSTEP_MODE_FRAC_2     0x02 	
#define MICROSTEP_MODE_FRAC_4     0x03 	
#define MICROSTEP_MODE_FRAC_8     0x04 	
#define MICROSTEP_MODE_FRAC_16    0x05 	
#define MICROSTEP_MODE_FRAC_32    0x06 	
#define MICROSTEP_MODE_FRAC_64    0x07 	
#define MICROSTEP_MODE_FRAC_128   0x08 	
#define MICROSTEP_MODE_FRAC_256   0x09 	
#define ENGINE_TYPE_NONE        0x00 	
#define ENGINE_TYPE_DC          0x01 	
#define ENGINE_TYPE_2DC         0x02 	
#define ENGINE_TYPE_STEP        0x03 	
#define ENGINE_TYPE_TEST        0x04 	
#define ENGINE_TYPE_BRUSHLESS   0x05 	
#define DRIVER_TYPE_DISCRETE_FET   0x01 	
#define DRIVER_TYPE_INTEGRATE      0x02 	
#define DRIVER_TYPE_EXTERNAL       0x03 	
#define POWER_REDUCT_ENABLED   0x01 	
#define POWER_OFF_ENABLED      0x02 	
#define POWER_SMOOTH_CURRENT   0x04 	
#define ALARM_ON_DRIVER_OVERHEATING    0x01 	
#define LOW_UPWR_PROTECTION            0x02 	
#define H_BRIDGE_ALERT                 0x04 	
#define ALARM_ON_BORDERS_SWAP_MISSET   0x08 	
#define ALARM_FLAGS_STICKING           0x10 	
#define USB_BREAK_RECONNECT            0x20 	
#define ALARM_WINDING_MISMATCH         0x40 	
#define ALARM_ENGINE_RESPONSE          0x80 	
#define SETPOS_IGNORE_POSITION   0x01 	
#define SETPOS_IGNORE_ENCODER    0x02 	
#define FEEDBACK_ENCODER            0x01 	
#define FEEDBACK_EMF                0x04 	
#define FEEDBACK_NONE               0x05 	
#define FEEDBACK_ENCODER_MEDIATED   0x06 	
#define FEEDBACK_ENC_REVERSE             0x01 	
#define FEEDBACK_ENC_TYPE_BITS           0xC0 	
#define FEEDBACK_ENC_TYPE_AUTO           0x00 	
#define FEEDBACK_ENC_TYPE_SINGLE_ENDED   0x40 	
#define FEEDBACK_ENC_TYPE_DIFFERENTIAL   0x80 	
#define SYNCIN_ENABLED        0x01 	
#define SYNCIN_INVERT         0x02 	
#define SYNCIN_GOTOPOSITION   0x04 	
#define SYNCOUT_ENABLED    0x01 	
#define SYNCOUT_STATE      0x02 	
#define SYNCOUT_INVERT     0x04 	
#define SYNCOUT_IN_STEPS   0x08 	
#define SYNCOUT_ONSTART    0x10 	
#define SYNCOUT_ONSTOP     0x20 	
#define SYNCOUT_ONPERIOD   0x40 	
#define EXTIO_SETUP_OUTPUT   0x01 	
#define EXTIO_SETUP_INVERT   0x02 	
#define EXTIO_SETUP_MODE_IN_BITS        0x0F 	
#define EXTIO_SETUP_MODE_IN_NOP         0x00 	
#define EXTIO_SETUP_MODE_IN_STOP        0x01 	
#define EXTIO_SETUP_MODE_IN_PWOF        0x02 	
#define EXTIO_SETUP_MODE_IN_MOVR        0x03 	
#define EXTIO_SETUP_MODE_IN_HOME        0x04 	
#define EXTIO_SETUP_MODE_IN_ALARM       0x05 	
#define EXTIO_SETUP_MODE_OUT_BITS       0xF0 	
#define EXTIO_SETUP_MODE_OUT_OFF        0x00 	
#define EXTIO_SETUP_MODE_OUT_ON         0x10 	
#define EXTIO_SETUP_MODE_OUT_MOVING     0x20 	
#define EXTIO_SETUP_MODE_OUT_ALARM      0x30 	
#define EXTIO_SETUP_MODE_OUT_MOTOR_ON   0x40 	
#define BORDER_IS_ENCODER               0x01 	
#define BORDER_STOP_LEFT                0x02 	
#define BORDER_STOP_RIGHT               0x04 	
#define BORDERS_SWAP_MISSET_DETECTION   0x08 	
#define ENDER_SWAP             0x01 	
#define ENDER_SW1_ACTIVE_LOW   0x02 	
#define ENDER_SW2_ACTIVE_LOW   0x04 	
#define BRAKE_ENABLED      0x01 	
#define BRAKE_ENG_PWROFF   0x02 	
#define CONTROL_MODE_BITS               0x03 	
#define CONTROL_MODE_OFF                0x00 	
#define CONTROL_MODE_JOY                0x01 	
#define CONTROL_MODE_LR                 0x02 	
#define CONTROL_BTN_LEFT_PUSHED_OPEN    0x04 	
#define CONTROL_BTN_RIGHT_PUSHED_OPEN   0x08 	
#define JOY_REVERSE   0x01 	
#define CTP_ENABLED            0x01 	
#define CTP_BASE               0x02 	
#define CTP_ALARM_ON_ERROR     0x04 	
#define REV_SENS_INV           0x08 	
#define CTP_ERROR_CORRECTION   0x10 	
#define HOME_DIR_FIRST          0x001 	
#define HOME_DIR_SECOND         0x002 	
#define HOME_MV_SEC_EN          0x004 	
#define HOME_HALF_MV            0x008 	
#define HOME_STOP_FIRST_BITS    0x030 	
#define HOME_STOP_FIRST_REV     0x010 	
#define HOME_STOP_FIRST_SYN     0x020 	
#define HOME_STOP_FIRST_LIM     0x030 	
#define HOME_STOP_SECOND_BITS   0x0C0 	
#define HOME_STOP_SECOND_REV    0x040 	
#define HOME_STOP_SECOND_SYN    0x080 	
#define HOME_STOP_SECOND_LIM    0x0C0 	
#define HOME_USE_FAST           0x100 	
#define UART_PARITY_BITS        0x03 	
#define UART_PARITY_BIT_EVEN    0x00 	
#define UART_PARITY_BIT_ODD     0x01 	
#define UART_PARITY_BIT_SPACE   0x02 	
#define UART_PARITY_BIT_MARK    0x03 	
#define UART_PARITY_BIT_USE     0x04 	
#define UART_STOP_BIT           0x08 	
#define MOTOR_TYPE_UNKNOWN   0x00 	
#define MOTOR_TYPE_STEP      0x01 	
#define MOTOR_TYPE_DC        0x02 	
#define MOTOR_TYPE_BLDC      0x03 	
#define ENCSET_DIFFERENTIAL_OUTPUT            0x001 	
#define ENCSET_PUSHPULL_OUTPUT                0x004 	
#define ENCSET_INDEXCHANNEL_PRESENT           0x010 	
#define ENCSET_REVOLUTIONSENSOR_PRESENT       0x040 	
#define ENCSET_REVOLUTIONSENSOR_ACTIVE_HIGH   0x100 	
#define MB_AVAILABLE      0x01 	
#define MB_POWERED_HOLD   0x02 	
#define TS_TYPE_BITS            0x07 	
#define TS_TYPE_UNKNOWN         0x00 	
#define TS_TYPE_THERMOCOUPLE    0x01 	
#define TS_TYPE_SEMICONDUCTOR   0x02 	
#define TS_AVAILABLE            0x08 	
#define LS_ON_SW1_AVAILABLE   0x01 	
#define LS_ON_SW2_AVAILABLE   0x02 	
#define LS_SW1_ACTIVE_LOW     0x04 	
#define LS_SW2_ACTIVE_LOW     0x08 	
#define LS_SHORTED            0x10 	
#define BACK_EMF_INDUCTANCE_AUTO   0x01 	
#define BACK_EMF_RESISTANCE_AUTO   0x02 	
#define BACK_EMF_KM_AUTO           0x04 	
	typedef struct
	{
		unsigned int IPS;	
		unsigned int FeedbackType;	
		unsigned int FeedbackFlags;	
		unsigned int CountsPerTurn;	
	} feedback_settings_t;
	typedef struct
	{
		unsigned int FastHome;	
		unsigned int uFastHome;	
		unsigned int SlowHome;	
		unsigned int uSlowHome;	
		int HomeDelta;	
		int uHomeDelta;	
		unsigned int HomeFlags;	
	} home_settings_t;
	typedef struct
	{
		float FastHome;	
		float SlowHome;	
		float HomeDelta;	
		unsigned int HomeFlags;	
	} home_settings_calb_t;
	typedef struct
	{
		unsigned int Speed;	
		unsigned int uSpeed;	
		unsigned int Accel;	
		unsigned int Decel;	
		unsigned int AntiplaySpeed;	
		unsigned int uAntiplaySpeed;	
		unsigned int MoveFlags;	
	} move_settings_t;
	typedef struct
	{
		float Speed;	
		float Accel;	
		float Decel;	
		float AntiplaySpeed;	
		unsigned int MoveFlags;	
	} move_settings_calb_t;
	typedef struct
	{
		unsigned int NomVoltage;	
		unsigned int NomCurrent;	
		unsigned int NomSpeed;	
		unsigned int uNomSpeed;	
		unsigned int EngineFlags;	
		int Antiplay;	
		unsigned int MicrostepMode;	
		unsigned int StepsPerRev;	
	} engine_settings_t;
	typedef struct
	{
		unsigned int NomVoltage;	
		unsigned int NomCurrent;	
		float NomSpeed;	
		unsigned int EngineFlags;	
		float Antiplay;	
		unsigned int MicrostepMode;	
		unsigned int StepsPerRev;	
	} engine_settings_calb_t;
	typedef struct
	{
		unsigned int EngineType;	
		unsigned int DriverType;	
	} entype_settings_t;
	typedef struct
	{
		unsigned int HoldCurrent;	
		unsigned int CurrReductDelay;	
		unsigned int PowerOffDelay;	
		unsigned int CurrentSetTime;	
		unsigned int PowerFlags;	
	} power_settings_t;
	typedef struct
	{
		unsigned int LowUpwrOff;	
		unsigned int CriticalIpwr;	
		unsigned int CriticalUpwr;	
		unsigned int CriticalT;	
		unsigned int CriticalIusb;	
		unsigned int CriticalUusb;	
		unsigned int MinimumUusb;	
		unsigned int Flags;	
	} secure_settings_t;
	typedef struct
	{
		unsigned int BorderFlags;	
		unsigned int EnderFlags;	
		int LeftBorder;	
		int uLeftBorder;	
		int RightBorder;	
		int uRightBorder;	
	} edges_settings_t;
	typedef struct
	{
		unsigned int BorderFlags;	
		unsigned int EnderFlags;	
		float LeftBorder;	
		float RightBorder;	
	} edges_settings_calb_t;
	typedef struct
	{
		unsigned int KpU;	
		unsigned int KiU;	
		unsigned int KdU;	
		float Kpf;	
		float Kif;	
		float Kdf;	
	} pid_settings_t;
	typedef struct
	{
		unsigned int SyncInFlags;	
		unsigned int ClutterTime;	
		int Position;	
		int uPosition;	
		unsigned int Speed;	
		unsigned int uSpeed;	
	} sync_in_settings_t;
	typedef struct
	{
		unsigned int SyncInFlags;	
		unsigned int ClutterTime;	
		float Position;	
		float Speed;	
	} sync_in_settings_calb_t;
	typedef struct
	{
		unsigned int SyncOutFlags;	
		unsigned int SyncOutPulseSteps;	
		unsigned int SyncOutPeriod;	
		unsigned int Accuracy;	
		unsigned int uAccuracy;	
	} sync_out_settings_t;
	typedef struct
	{
		unsigned int SyncOutFlags;	
		unsigned int SyncOutPulseSteps;	
		unsigned int SyncOutPeriod;	
		float Accuracy;	
	} sync_out_settings_calb_t;
	typedef struct
	{
		unsigned int EXTIOSetupFlags;	
		unsigned int EXTIOModeFlags;	
	} extio_settings_t;
	typedef struct
	{
		unsigned int t1;	
		unsigned int t2;	
		unsigned int t3;	
		unsigned int t4;	
		unsigned int BrakeFlags;	
	} brake_settings_t;
	typedef struct
	{
		unsigned int MaxSpeed[10];	
		unsigned int uMaxSpeed[10];	
		unsigned int Timeout[9];	
		unsigned int MaxClickTime;	
		unsigned int Flags;	
		int DeltaPosition;	
		int uDeltaPosition;	
	} control_settings_t;
	typedef struct
	{
		float MaxSpeed[10];	
		unsigned int Timeout[9];	
		unsigned int MaxClickTime;	
		unsigned int Flags;	
		float DeltaPosition;	
	} control_settings_calb_t;
	typedef struct
	{
		unsigned int JoyLowEnd;	
		unsigned int JoyCenter;	
		unsigned int JoyHighEnd;	
		unsigned int ExpFactor;	
		unsigned int DeadZone;	
		unsigned int JoyFlags;	
	} joystick_settings_t;
	typedef struct
	{
		unsigned int CTPMinError;	
		unsigned int CTPFlags;	
	} ctp_settings_t;
	typedef struct
	{
		unsigned int Speed;	
		unsigned int UARTSetupFlags;	
	} uart_settings_t;