imswitch/imcontrol/model/interfaces/ximc/win32/wrappers/delphi/ximc.pas

unit ximc;

interface

uses Windows, Sysutils;

const
	XimcDll = 'libximc.dll';

type
	Device = integer;

type
	XimcResult = integer;

type
	StringArray = array of string;

const
	DeviceUndefined = -1;

const
	ResultOk = 0;
	ResultError = -1;
	ResultNotImplemented = -2;
	ResultValueError = -3;
	ResultNoDevice = -4;

type
	PPAnsiChar = ^PAnsiChar;

type calibration_t = record
	A: double;
	MicrostepMode: integer;
end;


{
 ------------------------------------------
   BEGIN OF GENERATED struct declarations
 ------------------------------------------
}

const
	LIBXIMC_VERSION = '2.13.5';

const
	ENUMERATE_PROBE      = $01;
	ENUMERATE_ALL_COM    = $02;
	ENUMERATE_NETWORK    = $04;

	MOVE_STATE_MOVING          = $01;
	MOVE_STATE_TARGET_SPEED    = $02;
	MOVE_STATE_ANTIPLAY        = $04;

	EEPROM_PRECEDENCE    = $01;

	PWR_STATE_UNKNOWN    = $00;
	PWR_STATE_OFF        = $01;
	PWR_STATE_NORM       = $03;
	PWR_STATE_REDUCT     = $04;
	PWR_STATE_MAX        = $05;

	STATE_CONTR                     = $000003F;
	STATE_ERRC                      = $0000001;
	STATE_ERRD                      = $0000002;
	STATE_ERRV                      = $0000004;
	STATE_EEPROM_CONNECTED          = $0000010;
	STATE_IS_HOMED                  = $0000020;
	STATE_SECUR                     = $1B3FFC0;
	STATE_ALARM                     = $0000040;
	STATE_CTP_ERROR                 = $0000080;
	STATE_POWER_OVERHEAT            = $0000100;
	STATE_CONTROLLER_OVERHEAT       = $0000200;
	STATE_OVERLOAD_POWER_VOLTAGE    = $0000400;
	STATE_OVERLOAD_POWER_CURRENT    = $0000800;
	STATE_OVERLOAD_USB_VOLTAGE      = $0001000;
	STATE_LOW_USB_VOLTAGE           = $0002000;
	STATE_OVERLOAD_USB_CURRENT      = $0004000;
	STATE_BORDERS_SWAP_MISSET       = $0008000;
	STATE_LOW_POWER_VOLTAGE         = $0010000;
	STATE_H_BRIDGE_FAULT            = $0020000;
	STATE_WINDING_RES_MISMATCH      = $0100000;
	STATE_ENCODER_FAULT             = $0200000;
	STATE_ENGINE_RESPONSE_ERROR     = $0800000;
	STATE_EXTIO_ALARM               = $1000000;

	STATE_DIG_SIGNAL      = $FFFF;
	STATE_RIGHT_EDGE      = $0001;
	STATE_LEFT_EDGE       = $0002;
	STATE_BUTTON_RIGHT    = $0004;
	STATE_BUTTON_LEFT     = $0008;
	STATE_GPIO_PINOUT     = $0010;
	STATE_GPIO_LEVEL      = $0020;
	STATE_BRAKE           = $0200;
	STATE_REV_SENSOR      = $0400;
	STATE_SYNC_INPUT      = $0800;
	STATE_SYNC_OUTPUT     = $1000;
	STATE_ENC_A           = $2000;
	STATE_ENC_B           = $4000;

	ENC_STATE_ABSENT     = $00;
	ENC_STATE_UNKNOWN    = $01;
	ENC_STATE_MALFUNC    = $02;
	ENC_STATE_REVERS     = $03;
	ENC_STATE_OK         = $04;

	WIND_A_STATE_ABSENT     = $00;
	WIND_A_STATE_UNKNOWN    = $01;
	WIND_A_STATE_MALFUNC    = $02;
	WIND_A_STATE_OK         = $03;
	WIND_B_STATE_ABSENT     = $00;
	WIND_B_STATE_UNKNOWN    = $10;
	WIND_B_STATE_MALFUNC    = $20;
	WIND_B_STATE_OK         = $30;

	MVCMD_NAME_BITS    = $3F;
	MVCMD_UKNWN        = $00;
	MVCMD_MOVE         = $01;
	MVCMD_MOVR         = $02;
	MVCMD_LEFT         = $03;
	MVCMD_RIGHT        = $04;
	MVCMD_STOP         = $05;
	MVCMD_HOME         = $06;
	MVCMD_LOFT         = $07;
	MVCMD_SSTP         = $08;
	MVCMD_ERROR        = $40;
	MVCMD_RUNNING      = $80;

	RPM_DIV_1000    = $01;

	ENGINE_REVERSE           = $01;
	ENGINE_CURRENT_AS_RMS    = $02;
	ENGINE_MAX_SPEED         = $04;
	ENGINE_ANTIPLAY          = $08;
	ENGINE_ACCEL_ON          = $10;
	ENGINE_LIMIT_VOLT        = $20;
	ENGINE_LIMIT_CURR        = $40;
	ENGINE_LIMIT_RPM         = $80;

	MICROSTEP_MODE_FULL        = $01;
	MICROSTEP_MODE_FRAC_2      = $02;
	MICROSTEP_MODE_FRAC_4      = $03;
	MICROSTEP_MODE_FRAC_8      = $04;
	MICROSTEP_MODE_FRAC_16     = $05;
	MICROSTEP_MODE_FRAC_32     = $06;
	MICROSTEP_MODE_FRAC_64     = $07;
	MICROSTEP_MODE_FRAC_128    = $08;
	MICROSTEP_MODE_FRAC_256    = $09;

	ENGINE_TYPE_NONE         = $00;
	ENGINE_TYPE_DC           = $01;
	ENGINE_TYPE_2DC          = $02;
	ENGINE_TYPE_STEP         = $03;
	ENGINE_TYPE_TEST         = $04;
	ENGINE_TYPE_BRUSHLESS    = $05;

	DRIVER_TYPE_DISCRETE_FET    = $01;
	DRIVER_TYPE_INTEGRATE       = $02;
	DRIVER_TYPE_EXTERNAL        = $03;

	POWER_REDUCT_ENABLED    = $01;
	POWER_OFF_ENABLED       = $02;
	POWER_SMOOTH_CURRENT    = $04;

	ALARM_ON_DRIVER_OVERHEATING     = $01;
	LOW_UPWR_PROTECTION             = $02;
	H_BRIDGE_ALERT                  = $04;
	ALARM_ON_BORDERS_SWAP_MISSET    = $08;
	ALARM_FLAGS_STICKING            = $10;
	USB_BREAK_RECONNECT             = $20;
	ALARM_WINDING_MISMATCH          = $40;
	ALARM_ENGINE_RESPONSE           = $80;

	SETPOS_IGNORE_POSITION    = $01;
	SETPOS_IGNORE_ENCODER     = $02;

	FEEDBACK_ENCODER             = $01;
	FEEDBACK_EMF                 = $04;
	FEEDBACK_NONE                = $05;
	FEEDBACK_ENCODER_MEDIATED    = $06;

	FEEDBACK_ENC_REVERSE              = $01;
	FEEDBACK_ENC_TYPE_BITS            = $C0;
	FEEDBACK_ENC_TYPE_AUTO            = $00;
	FEEDBACK_ENC_TYPE_SINGLE_ENDED    = $40;
	FEEDBACK_ENC_TYPE_DIFFERENTIAL    = $80;

	SYNCIN_ENABLED         = $01;
	SYNCIN_INVERT          = $02;
	SYNCIN_GOTOPOSITION    = $04;

	SYNCOUT_ENABLED     = $01;
	SYNCOUT_STATE       = $02;
	SYNCOUT_INVERT      = $04;
	SYNCOUT_IN_STEPS    = $08;
	SYNCOUT_ONSTART     = $10;
	SYNCOUT_ONSTOP      = $20;
	SYNCOUT_ONPERIOD    = $40;

	EXTIO_SETUP_OUTPUT    = $01;
	EXTIO_SETUP_INVERT    = $02;

	EXTIO_SETUP_MODE_IN_BITS         = $0F;
	EXTIO_SETUP_MODE_IN_NOP          = $00;
	EXTIO_SETUP_MODE_IN_STOP         = $01;
	EXTIO_SETUP_MODE_IN_PWOF         = $02;
	EXTIO_SETUP_MODE_IN_MOVR         = $03;
	EXTIO_SETUP_MODE_IN_HOME         = $04;
	EXTIO_SETUP_MODE_IN_ALARM        = $05;
	EXTIO_SETUP_MODE_OUT_BITS        = $F0;
	EXTIO_SETUP_MODE_OUT_OFF         = $00;
	EXTIO_SETUP_MODE_OUT_ON          = $10;
	EXTIO_SETUP_MODE_OUT_MOVING      = $20;
	EXTIO_SETUP_MODE_OUT_ALARM       = $30;
	EXTIO_SETUP_MODE_OUT_MOTOR_ON    = $40;

	BORDER_IS_ENCODER                = $01;
	BORDER_STOP_LEFT                 = $02;
	BORDER_STOP_RIGHT                = $04;
	BORDERS_SWAP_MISSET_DETECTION    = $08;

	ENDER_SWAP              = $01;
	ENDER_SW1_ACTIVE_LOW    = $02;
	ENDER_SW2_ACTIVE_LOW    = $04;

	BRAKE_ENABLED       = $01;
	BRAKE_ENG_PWROFF    = $02;

	CONTROL_MODE_BITS                = $03;
	CONTROL_MODE_OFF                 = $00;
	CONTROL_MODE_JOY                 = $01;
	CONTROL_MODE_LR                  = $02;
	CONTROL_BTN_LEFT_PUSHED_OPEN     = $04;
	CONTROL_BTN_RIGHT_PUSHED_OPEN    = $08;

	JOY_REVERSE    = $01;

	CTP_ENABLED             = $01;
	CTP_BASE                = $02;
	CTP_ALARM_ON_ERROR      = $04;
	REV_SENS_INV            = $08;
	CTP_ERROR_CORRECTION    = $10;

	HOME_DIR_FIRST           = $001;
	HOME_DIR_SECOND          = $002;
	HOME_MV_SEC_EN           = $004;
	HOME_HALF_MV             = $008;
	HOME_STOP_FIRST_BITS     = $030;
	HOME_STOP_FIRST_REV      = $010;
	HOME_STOP_FIRST_SYN      = $020;
	HOME_STOP_FIRST_LIM      = $030;
	HOME_STOP_SECOND_BITS    = $0C0;
	HOME_STOP_SECOND_REV     = $040;
	HOME_STOP_SECOND_SYN     = $080;
	HOME_STOP_SECOND_LIM     = $0C0;
	HOME_USE_FAST            = $100;

	UART_PARITY_BITS         = $03;
	UART_PARITY_BIT_EVEN     = $00;
	UART_PARITY_BIT_ODD      = $01;
	UART_PARITY_BIT_SPACE    = $02;
	UART_PARITY_BIT_MARK     = $03;
	UART_PARITY_BIT_USE      = $04;
	UART_STOP_BIT            = $08;

	MOTOR_TYPE_UNKNOWN    = $00;
	MOTOR_TYPE_STEP       = $01;
	MOTOR_TYPE_DC         = $02;
	MOTOR_TYPE_BLDC       = $03;

	ENCSET_DIFFERENTIAL_OUTPUT             = $001;
	ENCSET_PUSHPULL_OUTPUT                 = $004;
	ENCSET_INDEXCHANNEL_PRESENT            = $010;
	ENCSET_REVOLUTIONSENSOR_PRESENT        = $040;
	ENCSET_REVOLUTIONSENSOR_ACTIVE_HIGH    = $100;

	MB_AVAILABLE       = $01;
	MB_POWERED_HOLD    = $02;

	TS_TYPE_BITS             = $07;
	TS_TYPE_UNKNOWN          = $00;
	TS_TYPE_THERMOCOUPLE     = $01;
	TS_TYPE_SEMICONDUCTOR    = $02;
	TS_AVAILABLE             = $08;

	LS_ON_SW1_AVAILABLE    = $01;
	LS_ON_SW2_AVAILABLE    = $02;
	LS_SW1_ACTIVE_LOW      = $04;
	LS_SW2_ACTIVE_LOW      = $08;
	LS_SHORTED             = $10;

	BACK_EMF_INDUCTANCE_AUTO    = $01;
	BACK_EMF_RESISTANCE_AUTO    = $02;
	BACK_EMF_KM_AUTO            = $04;


type feedback_settings_t = record
		IPS: cardinal;
		FeedbackType: cardinal;
		FeedbackFlags: cardinal;
		CountsPerTurn: cardinal;
end;

type home_settings_t = record
		FastHome: cardinal;
		uFastHome: cardinal;
		SlowHome: cardinal;
		uSlowHome: cardinal;
		HomeDelta: integer;
		uHomeDelta: integer;
		HomeFlags: cardinal;
end;

type home_settings_calb_t = record
		FastHome: single;
		SlowHome: single;
		HomeDelta: single;
		HomeFlags: cardinal;
end;

type move_settings_t = record
		Speed: cardinal;
		uSpeed: cardinal;
		Accel: cardinal;
		Decel: cardinal;
		AntiplaySpeed: cardinal;
		uAntiplaySpeed: cardinal;
		MoveFlags: cardinal;
end;

type move_settings_calb_t = record
		Speed: single;
		Accel: single;
		Decel: single;
		AntiplaySpeed: single;
		MoveFlags: cardinal;
end;

type engine_settings_t = record
		NomVoltage: cardinal;
		NomCurrent: cardinal;
		NomSpeed: cardinal;
		uNomSpeed: cardinal;
		EngineFlags: cardinal;
		Antiplay: integer;
		MicrostepMode: cardinal;
		StepsPerRev: cardinal;
end;

type engine_settings_calb_t = record
		NomVoltage: cardinal;
		NomCurrent: cardinal;
		NomSpeed: single;
		EngineFlags: cardinal;
		Antiplay: single;
		MicrostepMode: cardinal;
		StepsPerRev: cardinal;
end;

type entype_settings_t = record
		EngineType: cardinal;
		DriverType: cardinal;
end;

type power_settings_t = record
		HoldCurrent: cardinal;
		CurrReductDelay: cardinal;
		PowerOffDelay: cardinal;
		CurrentSetTime: cardinal;
		PowerFlags: cardinal;
end;

type secure_settings_t = record
		LowUpwrOff: cardinal;
		CriticalIpwr: cardinal;
		CriticalUpwr: cardinal;
		CriticalT: cardinal;
		CriticalIusb: cardinal;
		CriticalUusb: cardinal;
		MinimumUusb: cardinal;
		Flags: cardinal;
end;

type edges_settings_t = record
		BorderFlags: cardinal;
		EnderFlags: cardinal;
		LeftBorder: integer;
		uLeftBorder: integer;
		RightBorder: integer;
		uRightBorder: integer;
end;

type edges_settings_calb_t = record
		BorderFlags: cardinal;
		EnderFlags: cardinal;
		LeftBorder: single;
		RightBorder: single;
end;

type pid_settings_t = record
		KpU: cardinal;
		KiU: cardinal;
		KdU: cardinal;
		Kpf: single;
		Kif: single;
		Kdf: single;
end;

type sync_in_settings_t = record
		SyncInFlags: cardinal;
		ClutterTime: cardinal;
		Distance: integer;
		uPosition: integer;
		Speed: cardinal;
		uSpeed: cardinal;
end;

type sync_in_settings_calb_t = record
		SyncInFlags: cardinal;
		ClutterTime: cardinal;
		Distance: single;
		Speed: single;
end;

type sync_out_settings_t = record
		SyncOutFlags: cardinal;
		SyncOutPulseSteps: cardinal;
		SyncOutPeriod: cardinal;
		Accuracy: cardinal;
		uAccuracy: cardinal;
end;

type sync_out_settings_calb_t = record
		SyncOutFlags: cardinal;
		SyncOutPulseSteps: cardinal;
		SyncOutPeriod: cardinal;
		Accuracy: single;
end;

type extio_settings_t = record
		EXTIOSetupFlags: cardinal;
		EXTIOModeFlags: cardinal;
end;

type brake_settings_t = record
		t1: cardinal;
		t2: cardinal;
		t3: cardinal;
		t4: cardinal;
		BrakeFlags: cardinal;
end;

type control_settings_t = record
		MaxSpeed: array [0..9] of cardinal;
		uMaxSpeed: array [0..9] of cardinal;
		Timeout: array [0..8] of cardinal;
		MaxClickTime: cardinal;
		Flags: cardinal;
		DeltaPosition: integer;
		uDeltaPosition: integer;
end;

type control_settings_calb_t = record
		MaxSpeed: array [0..9] of single;
		Timeout: array [0..8] of cardinal;
		MaxClickTime: cardinal;
		Flags: cardinal;
		DeltaPosition: single;
end;

type joystick_settings_t = record
		JoyLowEnd: cardinal;
		JoyCenter: cardinal;
		JoyHighEnd: cardinal;
		ExpFactor: cardinal;
		DeadZone: cardinal;
		JoyFlags: cardinal;
end;

type ctp_settings_t = record
		CTPMinError: cardinal;
		CTPFlags: cardinal;
end;

type uart_settings_t = record
		Speed: cardinal;
		UARTSetupFlags: cardinal;
end;
